<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_point"
            android:icon="@drawable/ic_menu_point"
            android:title="@string/menu_point" />
        <item
            android:id="@+id/nav_linea"
            android:icon="@drawable/ic_menu_linea"
            android:title="@string/menu_linea" />
        <item
            android:id="@+id/nav_circle"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_circle" />
        <item
            android:id="@+id/nav_elipse"
            android:icon="@android:drawable/btn_radio"
            android:title="@string/menu_elipse" />
        <item
            android:id="@+id/nav_bezier"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_bezier" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
