<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ElipseComparators">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="100dp"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/color_low_gray"
                android:orientation="vertical"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/point_draw_space"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:scaleType="fitXY" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/line_list"
                    android:textSize="22sp" />

                <Spinner
                    android:id="@+id/spinner_line_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_line_x1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/line_preview_x"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/text_line_y1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/line_preview_y"
                    android:textSize="22sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/time_ddaall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/time_dda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/time_bressenham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>