<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.BezierComparator">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="100dp"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/color_low_gray"
                android:orientation="vertical"
                android:padding="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/bezier_interpolations"
                        android:textSize="22sp" />

                    <Spinner
                        android:id="@+id/spinner_bezier_interpolations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bezier_k"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/bezier_k"
                        android:textSize="22sp" />

                    <SeekBar
                        android:id="@+id/bezier_seek_k"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                    </SeekBar>

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_bezier_draw_space"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:scaleType="fitXY" />

            </LinearLayout>


            <TextView
                android:id="@+id/txt_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tiempo normal = "
                android:textSize="22sp" >
            </TextView>

            <TextView
                android:id="@+id/txt_matrix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tiempo matriz = "
                android:textSize="22sp" >
            </TextView>


            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>